Fix full page alignment

--- a/views/styles/_layout.scss
+++ b/views/styles/_layout.scss
@@ -10,6 +10,7 @@ html {
   background: $background-color;
   color: $foreground-color;
   font-family: 'Open Sans', sans-serif;
+  height: 100%;
 }
 
 a {
